Fin Seccion 14 Login y Auth

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>AdminProWC</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="82209796860-ac645d29mjsvhb6hrnnmj0msafmu0b0p.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Favicon icon -->
