--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link id="theme" rel="stylesheet">
+    <!-- Footable CSS -->
+    <link href="../assets/plugins/footable/css/footable.core.css" rel="stylesheet">
+    <link href="../assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" />
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -58,6 +61,10 @@
     <script src="./assets/js/custom.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+    <!-- Footable -->
+    <script src="../assets/plugins/footable/js/footable.all.min.js"></script>
+    <script src="../assets/plugins/bootstrap-select/bootstrap-select.min.js" type="text/javascript"></script>
 </body>
 
 </html>
