Se arreglan unos problemas con los combos de la pagina de creacion de modelos

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AdminProWC</title>
+    <title>AdminProWC.</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-client_id" content="82209796860-ac645d29mjsvhb6hrnnmj0msafmu0b0p.apps.googleusercontent.com">
